# Neural-Network

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp
ActivationFunc/: Activation.cpp  Activation.h  ReLu.cpp  ReLu.h  Sigmoid.cpp  Sigmoid.h  SoftMax.cpp  SoftMax.h
Common/: Initialization.cpp  Initialization.h  Matrix.cpp  Matrix.h  UsefulMethods.cpp  UsefulMethods.h  Vector.cpp  Vector.h  WrongDimensionsException.cpp  WrongDimensionsException.h
CostFunc/: Cost.h  CrossEntropy.cpp  CrossEntropy.h  MSE.cpp  MSE.h
Neural network components/: Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  TrainingSet.cpp  TrainingSet.h
Resources/: testSetNumbers.txt
